Fix numerous TypeScript errors across the codebase
This commit addresses a large number of TypeScript errors throughout the project. The fixes cover a wide range of issues, including incorrect type imports, unsafe type assertions, invalid prop types, incorrect function return types, and logical errors in authorization checks.

The primary challenge during this task was the inability to run the TypeScript checker (`pnpm run check`) due to a heap out-of-memory error. As a result, the fixes were made through manual inspection based on an initial error log and code analysis.

Key changes by directory:

- `src/components`:
  - Fixed missing `FC` type imports and removed unused `React` imports.
  - Resolved `unknown` type errors from `JSON.parse` and `CustomEvent`.
  - Corrected outdated mock data in tests to align with updated component props.
  - Refactored `useChat` and `useChatWithMemory` hooks to fix missing definitions and return properties.
  - Added missing optional properties to the `Message` type.
  - Resolved type conflicts and fixed data structure mismatches between hooks and components.
  - Per user instruction, the `ui` subdirectory was skipped due to its size.

- `src/config`:
  - Improved null-checking in `mongodb.config.ts`.
  - Corrected CSP merging logic in `security.ts`.

- `src/lib`:
  - Fixed a logic error in the `isStaffOrAdmin` function in `access-control.ts`.
  - Replaced unsafe type assertions in `analytics.ts` and `audit.ts`.
  - Corrected return types and mock implementations in `auth-legacy.ts`.
  - Addressed various other type errors and unsafe casts.
  - Per user instruction, this directory was only partially completed.

- `src/pages`:
  - Corrected invalid prop values (`bgType`, `ogImage`) in multiple Astro pages.
  - Fixed incorrect imports for components and hooks (e.g., `toast`, `Button`).
  - Corrected an incorrect event type in a `pointermove` listener.
  - Fixed an incorrect return type in an API route.
  - Resolved issues in `rss.xml

--- a/.gitignore
+++ b/.gitignore
@@ -152,15 +152,15 @@ claude-flow.bat
 claude-flow.ps1
 hive-mind-prompt-*.txt
 
-oc4vm-1.1.1.zip
 /ai/
 QWEN.md
 roo-code-settings.json
-.clinerules/byterover-rules.md
-.kilocode/rules/byterover-rules.md
-.roo/rules/byterover-rules.md
-.windsurf/rules/byterover-rules.md
-.cursor/rules/byterover-rules.mdc
-.kiro/steering/byterover-rules.md
-.qoder/rules/byterover-rules.md
-.augment/rules/byterover-rules.md
+kilo-code-settings.json
+.clinerules/
+.kilocode/
+.roo/
+.windsurf/
+.cursor/
+.kiro/
+.qoder/
+.augment/
