--- a/.dockerignore
+++ b/.dockerignore
@@ -1,14 +1,14 @@
-# Dependencies
-node_modules
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
 
-# Build outputs
-dist
-.astro
-.output
+node_modules/
+**/node_modules/
+.venv/
+venv/
+**/.pnpm/
+*.log
+
+# Build outputs that should be regenerated, not copied
+# dist - will be built in container
+# .output - will be built in container
 
 # Environment files
 .env.local
@@ -37,7 +37,6 @@ Thumbs.db
 
 # Git
 .git
-.gitignore
 .gitattributes
 
 # Documentation
@@ -147,11 +146,9 @@ dmypy.json
 
 # AI/ML training data and models (if not needed for runtime)
 ai/datasets/
-ai/data/
-ai/database/
+ai/data/processed/
 ai/pipelines/data/
 ai/models/training/
-ai/dataset_pipeline/
 ai/temporal_analysis_data*.jsonl
 ai/*.jsonl
 ai/*.csv
