--- a/package.json
+++ b/package.json
@@ -198,6 +198,7 @@
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.2",
     "resend": "^6.0.2",
+    "simple-git": "^3.28.0",
     "sonner": "^2.0.6",
     "swiper": "^11.2.10",
     "three": "^0.180.0",
@@ -224,8 +225,10 @@
     "@types/react-dom": "^19.1.9",
     "@unocss/astro": "^66.5.0",
     "@unocss/core": "^66.5.0",
-    "@unocss/reset": "^66.5.0",
-    "@vercel/kv": "^3.0.0",
+    "@unocss/reset": "^0.63.6",
+    "@vercel/kv": "^1.0.1",
+    "@vitejs/plugin-react": "^5.0.2",
+    "@vitest/coverage-v8": "3.2.4",
     "archiver": "^7.0.1",
     "astro": "^5.13.5",
     "astro-eslint-parser": "^1.2.2",
@@ -259,6 +262,7 @@
     "glob-parent": "^6.0.2",
     "globals": "^16.3.0",
     "globby": "^14.1.0",
+    "gray-matter": "^4.0.3",
     "hastscript": "^9.0.1",
     "html-entities": "^2.6.0",
     "js-base64": "^3.7.7",
