--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
     "@react-three/fiber": "^9.3.0",
     "@sentry/astro": "^10.10.0",
     "@sentry/browser": "^10.10.0",
+    "@sentry/profiling-node": "^10.10.0",
     "@sentry/vite-plugin": "^4.3.0",
     "@spotlightjs/astro": "^3.2.5",
     "@tensorflow/tfjs": "^4.22.0",
@@ -216,6 +217,7 @@
     "@iconify-json/ri": "^1.2.5",
     "@iconify-json/uil": "^1.2.3",
     "@playwright/test": "^1.55.0",
+    "@sentry/node": "^10.10.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
