refactor: update debug chatmode tools and add technical debt log; enhance memory types and configurations

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "target": "ES2022",
     "module": "ESNext",
     "moduleResolution": "bundler",
-    "lib": ["ESNext", "DOM", "DOM.Iterable", "WebWorker"],
+  "lib": ["ESNext", "DOM", "DOM.Iterable", "WebWorker"],
     "jsx": "react-jsx",
     "jsxImportSource": "react",
     "baseUrl": ".",
@@ -41,8 +41,8 @@
     "allowImportingTsExtensions": true,
     "allowUmdGlobalAccess": false,
   "types": ["astro/client", "node", "react", "react-dom", "vitest/globals"],
-  "typeRoots": ["./node_modules/@types"],
-    "skipLibCheck": true,
+  "typeRoots": ["./node_modules/@types", "./src/types"],
+  "skipLibCheck": false,
     "disableSourceOfProjectReferenceRedirect": true,
     "disableSolutionSearching": true,
     "assumeChangesOnlyAffectDirectDependencies": true,
@@ -54,9 +54,10 @@
     "downlevelIteration": true
   },
   "include": [
-    "src",
-    "tests/**/*.ts",
-    "tests/**/*.tsx",
+  "src",
+  "src/types/**/*.d.ts",
+  "tests/**/*.ts",
+  "tests/**/*.tsx",
     "playwright.config.ts",
     "*.config.js",
     "*.config.ts",
