--- a/package.json
+++ b/package.json
@@ -223,6 +223,7 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/next": "^9.0.0",
     "@types/node": "^24.3.1",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
@@ -277,6 +278,7 @@
     "medium-zoom": "^1.1.0",
     "micromatch": "^4.0.8",
     "msw": "^2.10.4",
+    "next": "^15.5.2",
     "oxc-parser": "^0.77.3",
     "oxlint": "^1.8.0",
     "papaparse": "^5.5.3",
