feat: add cross-region replication configuration for S3 bucket
chore: update API config to load passwords from environment variables

test: add session test file for API testing

test: add test session file for session management

refactor: update dashboard.spec.ts for consistent code style and structure

refactor: enhance TestUtils with improved methods for test setup and cleanup

test: refactor visual tests for Bias Dashboard to use standalone functions

chore: remove unnecessary TypeScript configuration files

fix: update tsconfig.json for improved type definitions and settings

chore: update vite.config.js for better logging and configuration management

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 orbs:
   node: circleci/node@7.1.1
   python: circleci/python@3.2.0
-  docker: circleci/docker@3.0.0
+  docker: circleci/docker@3.0.1
 
 workflows:
   build-and-test:
@@ -60,7 +60,7 @@ jobs:
 
   python-test:
     docker:
-      - image: cimg/python:3.11
+      - image: cimg/python@sha256:2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e2e # cimg/python:3.11 digest
     steps:
       - checkout
       - python/install-packages:
