--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,11 +24,11 @@ variables:
   DOCKER_TLS_CERTDIR: "/certs"
   CONTAINER_IMAGE: $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
   CONTAINER_IMAGE_LATEST: $CI_REGISTRY_IMAGE:latest
-  CI_REPOSITORY_URL: git@git.pixelatedempathy.tech:pixeltech/pixelated.git
+  CI_REPOSITORY_URL: git@gitlab.com:pixeldeck/pixelated.git
   # Override CI_REGISTRY to use correct port (registry runs on 443, not 5050)
-  CI_REGISTRY: https://git.pixelatedempathy.tech
+  CI_REGISTRY: https://gitlab.com/
   # Override CI_REGISTRY_IMAGE to strip :5050 and ensure push to 443
-  CI_REGISTRY_IMAGE: git.pixelatedempathy.tech/pixeltech/pixelated
+  CI_REGISTRY_IMAGE: gitlab.com/pixeldeck/pixelated
 validate-runner:
   stage: validate
   image: docker:24.0.5
