chore: update GitHub workflows for AI validation and remove CodeQL analysis
- Updated the AI validation workflow to fix indentation issues in the YAML file.
- Removed the CodeQL analysis workflow file as it is no longer needed.

fix: adjust rollback workflow permissions

- Removed unnecessary permissions for workflows in the rollback workflow.

feat: enhance Qdrant Dockerfile for user security

- Added a check to create a non-root user for the Qdrant service in the Dockerfile.

chore: update Bicep and JSON infrastructure files

- Added `numberOfWorkers` parameter to the app service configuration in Bicep and JSON files.

delete: remove outdated security baseline configuration

- Deleted the security baseline JSON file as it is no longer relevant.

feat: create CDN asset mapping configuration

- Added a new JSON configuration file for CDN asset mapping.

refactor: improve conversation memory hook

- Refactored the `useConversationMemory` hook to include default memory state and added session duration tracking.

fix: clamp progress snapshot values in session progress milestones hook

- Updated the `addProgressSnapshot` function to ensure progress values are clamped between 0 and 100.

refactor: enhance therapist analytics hook with filtering

- Improved the `useTherapistAnalytics` hook to apply filters for session data and added auto-refresh functionality.

test: update bias detection test fixtures

- Modified test fixtures for bias detection scenarios to align with new data structure and updated mocking library.

fix: improve Python bridge for bias detection

- Enhanced the Python bridge to handle connection pooling and abort signals more effectively.

fix: update batch analyze API handler

- Refactored the batch analyze API handler to improve session validation and error handling.

chore: clean up Terraform configuration

- Removed commented-out cross-region replication configuration from the S3 bucket resource in Terraform.

chore: update API testing configuration


--- a/docker/qdrant/Dockerfile
+++ b/docker/qdrant/Dockerfile
@@ -22,5 +22,6 @@ CMD ["/qdrant/qdrant"]
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
   CMD curl -f http://localhost:6333/health || exit 1
 
-# Ensure last USER is not root
-USER 1000
+# Create qdrant user if it doesn't exist and ensure last USER is not root
+RUN id -u qdrant &>/dev/null || useradd -r -s /bin/false qdrant
+USER qdrant
